--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ deploy:
   skip_cleanup: true
   github_token: $github_token
   local_dir: build
+  target-branch: master
+  fqdn: heasummn.me
   on:
-    branch: master
+    branch: code
