--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
-  "homepage": "http://heasummn.me",
+  "homepage": "http://heasummn.me/blog",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
